// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a custom item rendering 1`] = `
<div class="ais-InfiniteHits">
  <ol class="ais-InfiniteHits-list">
    <li class="ais-InfiniteHits-item">
      <div>
        00001
      </div>
    </li>
    <li class="ais-InfiniteHits-item">
      <div>
        00002
      </div>
    </li>
    <li class="ais-InfiniteHits-item">
      <div>
        00003
      </div>
    </li>
    <li class="ais-InfiniteHits-item">
      <div>
        00004
      </div>
    </li>
    <li class="ais-InfiniteHits-item">
      <div>
        00005
      </div>
    </li>
  </ol>
  <button class="ais-InfiniteHits-loadMore">
    Show more results
  </button>
</div>
`;

exports[`renders correctly with a custom rendering 1`] = `
<div class="ais-InfiniteHits">
  <div>
    <div>
      00001
    </div>
    <div>
      00002
    </div>
    <div>
      00003
    </div>
    <div>
      00004
    </div>
    <div>
      00005
    </div>
  </div>
</div>
`;
